--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -21,6 +21,7 @@ jobs:
       - uses: dorny/paths-filter@v2
         id: filter
         with:
+          base: featureaction
           filters: |
             dev:
               - 'config/playground/helm/dev/**'
