--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -28,22 +28,56 @@ jobs:
             prod:
               - 'config/playground/helm/prod/**'
 
-  build:
-    # The type of runner that the job will run on
+  OS-OSD-Dev-Deployment:
+    if: ${{ needs.Pre-Deployment.outputs.config_change_dev }}
     runs-on: ubuntu-latest
+
     needs: Pre-Deployment
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-          echo "${{ env.HELM_CONFIG_CHANGE }}"
-          echo "${{ env.HELM_CONFIG_CHANGE != 'all'}}"
-          echo "dev: ${{ needs.Pre-Deployment.outputs.config_change_dev }}"
-          echo "prod: ${{ needs.Pre-Deployment.outputs.config_change_prod }}"
+      - name: Step 1 - Dev - Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_DEV }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}
+          aws-region: ${{ secrets.AWS_REGION_DEV }}
+
+      - name: Step 2 - Dev - Deploy OpenSearch and OpenSearch Dashboards By Helm Chart
+        uses: elastic-analytics/dashboards-action@main
+        env:
+          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_DEV }}
+        with:
+          plugins: "" # optional, list of Helm plugins. eg. helm-secrets or helm-diff.
+          command: |
+            helm repo add opensearch https://opensearch-project.github.io/helm-charts/
+            helm repo update
+            helm search repo opensearch
+            kubectl get nodes
+
+  OS-OSD-Prod-Deployment:
+    if: ${{ needs.Pre-Deployment.outputs.config_change_prod }}
+    runs-on: ubuntu-latest
+
+    needs: Pre-Deployment
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Step 1 - Prod - Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}
+          aws-region: ${{ secrets.AWS_REGION_PROD }}
+
+      - name: Step 2 - Prod - Deploy OpenSearch and OpenSearch Dashboards By Helm Chart
+        uses: elastic-analytics/dashboards-action@main
+        env:
+          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_PROD }}
+        with:
+          plugins: "" # optional, list of Helm plugins. eg. helm-secrets or helm-diff.
+          command: |
+            helm repo add opensearch https://opensearch-project.github.io/helm-charts/
+            helm repo update
+            helm search repo opensearch
+            kubectl get nodes
