--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -29,7 +29,7 @@ jobs:
               - 'config/playground/helm/prod/**'
 
   OS-OSD-Dev-Deployment:
-    if: ${{ needs.Pre-Deployment.outputs.config_change_dev }}
+    if: ${{ needs.Pre-Deployment.outputs.config_change_dev == 'true'}}
     runs-on: ubuntu-latest
 
     needs: Pre-Deployment
@@ -56,7 +56,7 @@ jobs:
             kubectl get nodes
 
   OS-OSD-Prod-Deployment:
-    if: ${{ needs.Pre-Deployment.outputs.config_change_prod }}
+    if: ${{ needs.Pre-Deployment.outputs.config_change_prod == 'true'}}
     runs-on: ubuntu-latest
 
     needs: Pre-Deployment
