--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -1,11 +1,12 @@
 name: Deploy OS and OSD
+description: This workflow was used for deploying the latest OpenSearch and OpenSearch Dashboards to AWS EKS (Elastic Kubernetes Service) cluster.
 
 on:
   push:
     branches: [ featureaction ]
+  # adds workflow_dispatch for manually running a workflow
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
 
   Pre-Deployment:
@@ -17,11 +18,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
       - uses: dorny/paths-filter@v2
         id: filter
         with:
           base: featureaction
+          # creats filters for tracking dev and prod changes
           filters: |
             dev:
               - 'config/playground/helm/dev/**'
@@ -49,6 +50,8 @@ jobs:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_DEV }}
         with:
           plugins: "" # optional, list of Helm plugins. eg. helm-secrets or helm-diff.
+          # lists couple helm and kubetl commands here as placeholder, will add more
+          # detail deployment command when helm configuration file ready.
           command: |
             helm repo add opensearch https://opensearch-project.github.io/helm-charts/
             helm repo update
