--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -84,8 +84,8 @@ jobs:
             helm repo update
             helm search repo opensearch
             kubectl get nodes
-            helm install opensearch opensearch/opensearch -f config/playground/helm/prod/helm-opensearch.yaml
-            helm install dashboards opensearch/opensearch-dashboards -f config/playground/helm/prod/helm-opensearch-dashboards.yaml
+            helm upgrade opensearch opensearch/opensearch -f config/playground/helm/prod/helm-opensearch.yaml --force
+            helm upgrade dashboards opensearch/opensearch-dashboards -f config/playground/helm/prod/helm-opensearch-dashboards.yaml --force
 
   OS-OSD-All-Deployment:
     if: ${{ needs.Pre-Deployment.outputs.config_change_dev == 'true' && needs.Pre-Deployment.outputs.config_change_prod == 'true'}}
@@ -132,3 +132,19 @@ jobs:
             helm repo update
             helm search repo opensearch
             kubectl get nodes
+
+  OSD-Functional-Test:
+      needs: OS-OSD-Prod-Deployment
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout function test repo
+          uses: actions/checkout@v3
+          with:
+            repository: elastic-analytics/opensearch-dashboards-functional-test
+            ref: playground
+
+        - name: Install dependencies for function test
+          run: |
+            npm install
+            npm install -g yarn
+            yarn cypress run --spec "cypress/integration/core-opensearch-dashboards/opensearch-dashboards/*.js" --config "baseUrl=https://preview.opensearch.oss.aws.dev" --env "openSearchUrl=https://preview.opensearch.oss.aws.dev,SECURITY_ENABLED=true,username=${{secrets.OSD_USER}},password=${{secrets.OSD_USER_PASSWORD}}"
