--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -84,8 +84,11 @@ jobs:
             helm repo update
             helm search repo opensearch
             kubectl get nodes
-            helm upgrade opensearch opensearch/opensearch -f config/playground/helm/prod/helm-opensearch.yaml --force
-            helm upgrade dashboards opensearch/opensearch-dashboards -f config/playground/helm/prod/helm-opensearch-dashboards.yaml --force
+            helm uninstall opensearch --namespace default
+            helm uninstall dashboards --namespace default
+            kubectl delete pvc --all
+            helm install opensearch opensearch/opensearch -f config/playground/helm/prod/helm-opensearch.yaml
+            helm install dashboards opensearch/opensearch-dashboards -f config/playground/helm/prod/helm-opensearch-dashboards.yaml
 
   OS-OSD-All-Deployment:
     if: ${{ needs.Pre-Deployment.outputs.config_change_dev == 'true' && needs.Pre-Deployment.outputs.config_change_prod == 'true'}}
