--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -153,10 +153,11 @@ jobs:
 
         - name: Step 1 - Check If OSD is Up
           run: |
-            curl -XGET -k -u 'admin:Admin_123' 'https://preview.opensearch.oss.aws.dev/api/status' > $HOME/osd-response.json
-            echo "OSD_STATUS=$(cat $HOME/osd-response.json | jq -r .status.overall.state)" >> $GITHUB_ENV
+            sleep 15s
+            curl -XGET -k -u '${{secrets.OSD_USER}}:{{secrets.OSD_USER_PASSWORD}}' 'https://preview.opensearch.oss.aws.dev/api/status' > $HOME/osd-response.json
+            echo "OSD_STATUS=$(cat $HOME/osd-response.json | jq -r '.status.overall.state')" >> $GITHUB_ENV
 
-        - name: Step 2 - Install dependencies for function test
+        - name: Step 2 - Run Function Test
           if: ${{ env.OSD_STATUS == 'green'}}
           run: |
             yarn cypress run --spec "cypress/integration/playground/plugins/*.js" --config "baseUrl=https://preview.opensearch.oss.aws.dev" --env "openSearchUrl=https://preview.opensearch.oss.aws.dev,SECURITY_ENABLED=true,username=${{secrets.OSD_USER}},password=${{secrets.OSD_USER_PASSWORD}}"
