--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -156,6 +156,7 @@ jobs:
             sleep 15s
             curl -XGET -k -u '${{secrets.OSD_USER}}:{{secrets.OSD_USER_PASSWORD}}' 'https://preview.opensearch.oss.aws.dev/api/status' > $HOME/osd-response.json
             echo "OSD_STATUS=$(cat $HOME/osd-response.json | jq -r '.status.overall.state')" >> $GITHUB_ENV
+            echo $OSD_STATUS
 
         - name: Step 2 - Run Function Test
           if: ${{ env.OSD_STATUS == 'green'}}
