--- a/config/playground/helm/prod/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/prod/helm-opensearch-dashboards.yaml
@@ -18,7 +18,7 @@ nameOverride: ""
 fullnameOverride: ""
 
 serviceAccount:
-  # Specifies whether a service account should be created
+  # Specifies whether a service account should be created.
   create: true
   # Annotations to add to the service account
   annotations: {}
