--- a/config/playground/helm/prod/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/prod/helm-opensearch-dashboards.yaml
@@ -23,7 +23,7 @@ serviceAccount:
   # Annotations to add to the service account
   annotations: {}
   # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
+  # If not set and create is true, a name is generated using the fullname template.
   name: ""
 
 rbac:
