--- a/config/playground/helm/prod/helm-opensearch.yaml
+++ b/config/playground/helm/prod/helm-opensearch.yaml
@@ -186,7 +186,7 @@ updateStrategy: RollingUpdate
 
 # This is the max unavailable setting for the pod disruption budget
 # The default value of 1 will make sure that kubernetes won't allow more than 1
-# of your pods to be unavailable during maintenance.
+# of your pods to be unavailable during maintenance
 maxUnavailable: 1
 
 podSecurityContext:
