Revised permissions for anonymous access role
Signed-off-by: Huy Nguyen <73027756+huyaboo@users.noreply.github.com>

--- a/config/playground/helm/dev/helm-opensearch.yaml
+++ b/config/playground/helm/dev/helm-opensearch.yaml
@@ -555,41 +555,51 @@ securityConfig:
         opendistro_security_anonymous:
           reserved: true
           cluster_permissions:
-            - 'cluster_monitor'
-            - 'cluster:admin/ingest/pipeline/get'
-            - 'cluster:admin/ingest/processor/grok/get'
-            - 'cluster:admin/opendistro/ad/detector/search'
-            - 'cluster:admin/opendistro/ad/detectors/get'
+            # Confirmed read-only roles
+            - 'cluster_composite_ops_ro'
             - 'cluster:admin/opendistro/alerting/alerts/get'
-            - 'cluster:admin/opendistro/alerting/destination/email_account/get'
             - 'cluster:admin/opendistro/alerting/destination/get'
             - 'cluster:admin/opendistro/alerting/monitor/get'
-            - 'cluster:admin/opendistro/asynchronous_search/get'
-            - 'cluster:admin/opendistro/ism/policy/get'
-            - 'cluster:admin/opendistro/rollup/get'
-            - 'cluster:admin/opendistro/reports/definition/get'
-            - 'cluster:admin/opendistro/reports/instance/get'
-            - 'cluster:admin/opendistro/reports/definition/list'
-            - 'cluster:admin/opendistro/reports/instance/list'
-            - 'cluster:admin/opensearch/observability/get'
-            - 'cluster:admin/repository/get'
-            - 'cluster:admin/script/get'
-            - 'cluster:admin/snapshot/get'
-            - 'cluster:monitor/task/get'
-            - 'cluster_composite_ops_ro'
+            - 'cluster:admin/opendistro/alerting/monitor/search'
+            - 'cluster:admin/opensearch/alerting/findings/get'
+            - 'cluster:admin/opendistro/ad/detector/info'
+            - 'cluster:admin/opendistro/ad/detector/search'
+            - 'cluster:admin/opendistro/ad/detectors/get'
             - 'cluster:admin/opendistro/ad/result/search'
             - 'cluster:admin/opendistro/ad/tasks/search'
-            - 'cluster:admin/opendistro/alerting/destination/email_account/search'
-            - 'cluster:admin/opendistro/alerting/destination/email_group/search'
-            - 'cluster:admin/opendistro/alerting/monitor/search'
-            - 'cluster:admin/opendistro/ism/policy/search'
-            - 'cluster:admin/opendistro/rollup/search'
-            - 'cluster:admin/opendistro/ism/managedindex/explain'
-            - 'cluster:admin/opendistro/transform/get_transforms'
-            - 'cluster:admin/opendistro/rollup/explain'
-            - 'cluster:admin/opendistro/transform/explain'
-            - 'cluster:admin/opensearch/notifications/features'
+            - 'cluster:admin/opendistro/ad/detector/validate'
+            - 'cluster:admin/opendistro/ad/result/topAnomalies'
+            - 'cluster:admin/opendistro/notebooks/list'
+            - 'cluster:admin/opendistro/notebooks/get'
+            - 'cluster:admin/opensearch/observability/get'
+            - 'cluster:admin/opendistro/reports/instance/list'
+            - 'cluster:admin/opendistro/reports/instance/get'
+            - 'cluster:admin/opendistro/reports/menu/download'
+            - 'cluster:admin/opendistro/reports/definition/get'
+            - 'cluster:admin/opendistro/reports/definition/list'
+            - 'cluster:admin/opendistro/reports/instance/list'
+            - 'cluster:admin/opendistro/reports/instance/get'
+            - 'cluster:admin/opendistro/reports/menu/download'
+            - 'cluster:admin/opendistro/asynchronous_search/get'
+            - 'cluster:admin/opensearch/ml/stats/nodes'
+            - 'cluster:admin/opensearch/ml/models/get'
+            - 'cluster:admin/opensearch/ml/models/search'
+            - 'cluster:admin/opensearch/ml/tasks/get'
+            - 'cluster:admin/opensearch/ml/tasks/search'
             - 'cluster:admin/opensearch/notifications/configs/get'
+            - 'cluster:admin/opensearch/notifications/features'
+            - 'cluster:admin/opensearch/notifications/channels/get'
+
+            # For using _cat/indices
+            - 'cluster:monitor/state'
+            - 'cluster:monitor/health'
+
+            # To enable read access to ISM
+            - cluster:admin/opendistro/ism/policy/search
+            - cluster:admin/opendistro/ism/managedindex/explain
+            - cluster:admin/opendistro/rollup/search
+            - cluster:admin/opendistro/transform/get_transforms
+
           index_permissions:
             - index_patterns:
                 - ".kibana"
@@ -606,18 +616,7 @@ securityConfig:
                 - 'indices:monitor/stats'
                 - 'indices:data/read*'
                 - 'indices:admin/get'
-                # - 'indices:admin/mappings/fields/get*'
-                # - 'indices:admin/aliases*'
-                # - 'indices:admin/data_stream/get'
-                # - 'indices:admin/index_template/get'
-                # - 'indices:admin/mappings/fields/get*'
-                # - 'indices:admin/mappings/get'
-                # - 'indices:admin/template/get'
-                # - 'indices:admin/shards/search_shards'
-                # - '.tasks'
-                # - '.management-beats'
-                # - '*:.tasks'
-                # - '*:.management-beats'
+
           tenant_permissions:
             - tenant_patterns:
               - '*'
