--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -136,146 +136,14 @@ jobs:
             helm search repo opensearch
             kubectl get nodes
 
-  OSD-Functional-Test-OSD:
-      needs: OS-OSD-Prod-Deployment
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout function test repo
-          uses: actions/checkout@v3
-          with:
-            repository: elastic-analytics/opensearch-dashboards-functional-test
-            ref: playground
+  OSD-Functional-Test-Dev:
+        needs: OS-OSD-Dev-Deployment
+        uses: opensearch-project/dashboards-anywhere/.github/workflows/reusable-functiontest.yml@featureaction
+        with:
+          endpoint: https://playground.opensearch.oss.aws.dev
 
-        - name: Step 0 - Install dependencies for function test
-          run: |
-            npm install
-            npm install -g yarn
-
-        - name: Step 1 - Check If OSD is Up
-          run: |
-            sleep 30s
-            curl -XGET -k -u '${{secrets.OSD_USER}}:${{secrets.OSD_USER_PASSWORD}}' 'https://preview.opensearch.oss.aws.dev/api/status' > $HOME/osd-response.json
-            echo "OSD_STATUS=$(cat $HOME/osd-response.json | jq -r '.status.overall.state')" >> $GITHUB_ENV
-
-        - name: Step 2 - Run Function Test For OSD
-          if: ${{ env.OSD_STATUS == 'green'}}
-          run: |
-            yarn cypress run --spec "cypress/integration/playground/dashboards/*.js" --config "baseUrl=https://preview.opensearch.oss.aws.dev" --env "openSearchUrl=https://preview.opensearch.oss.aws.dev,SECURITY_ENABLED=true,username=${{secrets.OSD_USER}},password=${{secrets.OSD_USER_PASSWORD}}"
-
-  OSD-Functional-Test-AD:
-      needs: [OS-OSD-Prod-Deployment,OSD-Functional-Test-OSD]
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout function test repo
-          uses: actions/checkout@v3
-          with:
-            repository: elastic-analytics/opensearch-dashboards-functional-test
-            ref: playground
-
-        - name: Step 0 - Install dependencies for function test
-          run: |
-            npm install
-            npm install -g yarn
-
-        - name: Step 1 - Run Function Test For AD
-          run: |
-            yarn cypress run --spec "cypress/integration/playground/plugins/playground_ad*.js" --config "baseUrl=https://preview.opensearch.oss.aws.dev" --env "openSearchUrl=https://preview.opensearch.oss.aws.dev,SECURITY_ENABLED=true,username=${{secrets.OSD_USER}},password=${{secrets.OSD_USER_PASSWORD}}"
-
-
-  OSD-Functional-Test-Alert:
-      needs: [OS-OSD-Prod-Deployment,OSD-Functional-Test-OSD]
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout function test repo
-          uses: actions/checkout@v3
-          with:
-            repository: elastic-analytics/opensearch-dashboards-functional-test
-            ref: playground
-
-        - name: Step 0 - Install dependencies for function test
-          run: |
-            npm install
-            npm install -g yarn
-
-        - name: Step 1 - Run Function Test For Alert
-          run: |
-            yarn cypress run --spec "cypress/integration/playground/plugins/playground_alert*.js" --config "baseUrl=https://preview.opensearch.oss.aws.dev" --env "openSearchUrl=https://preview.opensearch.oss.aws.dev,SECURITY_ENABLED=true,username=${{secrets.OSD_USER}},password=${{secrets.OSD_USER_PASSWORD}}"
-
-
-  OSD-Functional-Test-Notifications:
-      needs: [OS-OSD-Prod-Deployment,OSD-Functional-Test-OSD]
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout function test repo
-          uses: actions/checkout@v3
-          with:
-            repository: elastic-analytics/opensearch-dashboards-functional-test
-            ref: playground
-
-        - name: Step 0 - Install dependencies for function test
-          run: |
-            npm install
-            npm install -g yarn
-
-        - name: Step 1 - Run Function Test For Alert
-          run: |
-            yarn cypress run --spec "cypress/integration/playground/plugins/playground_notifications*.js" --config "baseUrl=https://preview.opensearch.oss.aws.dev" --env "openSearchUrl=https://preview.opensearch.oss.aws.dev,SECURITY_ENABLED=true,username=${{secrets.OSD_USER}},password=${{secrets.OSD_USER_PASSWORD}}"
-
-
-  OSD-Functional-Test-Reports:
-      needs: [OS-OSD-Prod-Deployment,OSD-Functional-Test-OSD]
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout function test repo
-          uses: actions/checkout@v3
-          with:
-            repository: elastic-analytics/opensearch-dashboards-functional-test
-            ref: playground
-
-        - name: Step 0 - Install dependencies for function test
-          run: |
-            npm install
-            npm install -g yarn
-
-        - name: Step 1 - Run Function Test For Reports
-          run: |
-            yarn cypress run --spec "cypress/integration/playground/plugins/playground_reports*.js" --config "baseUrl=https://preview.opensearch.oss.aws.dev" --env "openSearchUrl=https://preview.opensearch.oss.aws.dev,SECURITY_ENABLED=true,username=${{secrets.OSD_USER}},password=${{secrets.OSD_USER_PASSWORD}}"
-
-  OSD-Functional-Test-Observability:
-      needs: [OS-OSD-Prod-Deployment,OSD-Functional-Test-OSD]
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout function test repo
-          uses: actions/checkout@v3
-          with:
-            repository: elastic-analytics/opensearch-dashboards-functional-test
-            ref: playground
-
-        - name: Step 0 - Install dependencies for function test
-          run: |
-            npm install
-            npm install -g yarn
-
-        - name: Step 1 - Run Function Test For Observability
-          run: |
-            yarn cypress run --spec "cypress/integration/playground/plugins/playground_observability*.js" --config "baseUrl=https://preview.opensearch.oss.aws.dev" --env "openSearchUrl=https://preview.opensearch.oss.aws.dev,SECURITY_ENABLED=true,username=${{secrets.OSD_USER}},password=${{secrets.OSD_USER_PASSWORD}}"
-
-
-  OSD-Functional-Test-IndexMan:
-      needs: [OS-OSD-Prod-Deployment,OSD-Functional-Test-OSD]
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout function test repo
-          uses: actions/checkout@v3
-          with:
-            repository: elastic-analytics/opensearch-dashboards-functional-test
-            ref: playground
-
-        - name: Step 0 - Install dependencies for function test
-          run: |
-            npm install
-            npm install -g yarn
-
-        - name: Step 1 - Run Function Test For Index Management
-          run: |
-            yarn cypress run --spec "cypress/integration/playground/plugins/playground_index*.js" --config "baseUrl=https://preview.opensearch.oss.aws.dev" --env "openSearchUrl=https://preview.opensearch.oss.aws.dev,SECURITY_ENABLED=true,username=${{secrets.OSD_USER}},password=${{secrets.OSD_USER_PASSWORD}}"
+  OSD-Functional-Test-Prod:
+        needs: OS-OSD-Prod-Deployment
+        uses: opensearch-project/dashboards-anywhere/.github/workflows/reusable-functiontest.yml@featureaction
+        with:
+          endpoint: https://preview.opensearch.oss.aws.dev
