update deployment config
Signed-off-by: Tao liu <liutaoaz@amazon.com>

--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -30,111 +30,28 @@ jobs:
               - 'config/playground/helm/prod/**'
 
   OS-OSD-Dev-Deployment:
-    if: ${{ needs.Pre-Deployment.outputs.config_change_dev == 'true'}}
-    runs-on: ubuntu-latest
-
     needs: Pre-Deployment
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Step 1 - Dev - Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_DEV }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}
-          aws-region: ${{ secrets.AWS_REGION_DEV }}
-
-      - name: Step 2 - Dev - Deploy OpenSearch and OpenSearch Dashboards By Helm Chart
-        uses: elastic-analytics/dashboards-action@main
-        env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_DEV }}
-        with:
-          plugins: "" # optional, list of Helm plugins. eg. helm-secrets or helm-diff.
-          # lists couple helm and kubetl commands here as placeholder, will add more
-          # detail deployment command when helm configuration file ready.
-          command: |
-            helm repo add opensearch https://opensearch-project.github.io/helm-charts/
-            helm repo update
-            helm search repo opensearch
-            kubectl get nodes
+    if:  ${{ needs.Pre-Deployment.outputs.config_change_dev == 'true' }}
+    uses:  opensearch-project/dashboards-anywhere/.github/workflows/reusable-deployment.yml@featureaction
+    with:
+      helm-repo: https://opensearch-project.github.io/helm-charts/
+    secrets:
+      access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_DEV }}
+      secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}
+      region: ${{ secrets.AWS_REGION_DEV }}
+      kube-config: ${{ secrets.KUBE_CONFIG_DATA_DEV }}
 
   OS-OSD-Prod-Deployment:
+    needs: Pre-Deployment
     if: ${{ needs.Pre-Deployment.outputs.config_change_prod == 'true'}}
-    runs-on: ubuntu-latest
-
-    needs: Pre-Deployment
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Step 1 - Prod - Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}
-          aws-region: ${{ secrets.AWS_REGION_PROD }}
-
-      - name: Step 2 - Prod - Deploy OpenSearch and OpenSearch Dashboards By Helm Chart
-        uses: elastic-analytics/dashboards-action@main
-        env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_PROD }}
-        with:
-          plugins: "" # optional, list of Helm plugins. eg. helm-secrets or helm-diff.
-          command: |
-            helm repo add opensearch https://opensearch-project.github.io/helm-charts/
-            helm repo update
-            helm search repo opensearch
-            kubectl get nodes
-            helm uninstall opensearch --namespace default
-            helm uninstall dashboards --namespace default
-            kubectl delete pvc --all
-            helm install opensearch opensearch/opensearch -f config/playground/helm/prod/helm-opensearch.yaml
-            helm install dashboards opensearch/opensearch-dashboards -f config/playground/helm/prod/helm-opensearch-dashboards.yaml
-
-  OS-OSD-All-Deployment:
-    if: ${{ needs.Pre-Deployment.outputs.config_change_dev == 'true' && needs.Pre-Deployment.outputs.config_change_prod == 'true'}}
-    runs-on: ubuntu-latest
-
-    needs: Pre-Deployment
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Step 1 - Dev - Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_DEV }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}
-          aws-region: ${{ secrets.AWS_REGION_DEV }}
-
-      - name: Step 2 - Dev - Deploy OpenSearch and OpenSearch Dashboards By Helm Chart
-        uses: elastic-analytics/dashboards-action@main
-        env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_DEV }}
-        with:
-          plugins: "" # optional, list of Helm plugins. eg. helm-secrets or helm-diff.
-          command: |
-            helm repo add opensearch https://opensearch-project.github.io/helm-charts/
-            helm repo update
-            helm search repo opensearch
-            kubectl get nodes
-
-      - name: Step 3 - Prod - Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}
-          aws-region: ${{ secrets.AWS_REGION_PROD }}
-
-      - name: Step 4 - Prod - Deploy OpenSearch and OpenSearch Dashboards By Helm Chart
-        uses: elastic-analytics/dashboards-action@main
-        env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_PROD }}
-        with:
-          plugins: "" # optional, list of Helm plugins. eg. helm-secrets or helm-diff.
-          command: |
-            helm repo add opensearch https://opensearch-project.github.io/helm-charts/
-            helm repo update
-            helm search repo opensearch
-            kubectl get nodes
+    uses:  opensearch-project/dashboards-anywhere/.github/workflows/reusable-deployment.yml@featureaction
+    with:
+      helm-repo: https://opensearch-project.github.io/helm-charts/
+    secrets:
+      access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
+      secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}
+      region: ${{ secrets.AWS_REGION_PROD }}
+      kube-config: ${{ secrets.KUBE_CONFIG_DATA_PROD }}
 
   OSD-Functional-Test-Dev:
         needs: OS-OSD-Dev-Deployment
@@ -146,4 +63,4 @@ jobs:
         needs: OS-OSD-Prod-Deployment
         uses: opensearch-project/dashboards-anywhere/.github/workflows/reusable-function-test.yml@featureaction
         with:
-          endpoint: https://preview.opensearch.oss.aws.dev
+          endpoint: https://playground.opensearch.org
